--- a/protokoll.tex
+++ b/protokoll.tex
@@ -9,7 +9,7 @@
 \usepackage{cite}
 
 % Titel und Autor
-\title{RNA quantifizierung mittels qPCR}
+\title{RNA-Quantifizierung mittels qPCR}
 \author{Thorsten Enge \and David Maruhn}
 \date{\today}
 
@@ -25,8 +25,32 @@
 % Einleitung
 \section{Einleitung}
 
+Während bei der DNA-Analytik untersucht wird, ob eine bestimmte
+DNA-Sequenz auf dem Genom vorhanden ist, wird bei der RNA-Analytik
+untersucht, ob und wie stark ein bestimmtes Gen transkribiert wird.
+Das Vorhandensein eines Gens auf dem Genom bedeutet nicht zwangsläufig,
+dass dieses Gen auch transkribiert wird. Mechanismen wie die
+DNA-Methylierung, die Histonmodifikation, Transkriptionsfaktoren und
+Enhancer bzw. Silencer beeinflussen die Transkription eines Gens.
+Die durch die Analyse der RNA kann einerseits das Vorhandensein eines
+Gens auf dem Genom bestätigt werden, andererseits kann durch die
+quantifizierung Rückschlüsse auf die Transkriptionsrate gezogen werden
+und somit auf die Aktivität des Gens. Das nichtvorhandensein einer RNA
+bedeutet nicht zwangsläufig, dass das Gen nicht auf dem Genom vorhanden
+ist, sondern dass es nicht transkribiert wird.
+
+
 % Materialien und Methoden
 \section{Materialien und Methoden}
+
+\subsection*{Zellkulturen}
+Für die RNA-Isolation wurden die Zelllinien HEK293T und A375 verwendet.
+Beide Zellkulturen 
+\subsubsection*{HEK293T}
+\subsubsection*{A375}
+
+
+\section{Durchführung}
 
 % Ergebnisse
 \section{Ergebnisse}
