--- a/protokoll.tex
+++ b/protokoll.tex
@@ -45,10 +45,15 @@ ist, sondern dass es nicht transkribiert wird.
 
 \subsection*{Zellkulturen}
 Für die RNA-Isolation wurden die Zelllinien HEK293T und A375 verwendet.
-Beide Zellkulturen 
+Beide Zellkulturen sind immortale humane Zelllinien, welche
+in einem gesunden Menschlichen Organismus nicht vorkommen.
 \subsubsection*{HEK293T}
+HEK293T sind Zellen, die aus der Niere eines Embryos gewonnen wurden.
+Sie sind durch die Transformation mit dem SV40-T-Antigen immortalisiert
+worden. HEK293T-Zellen sind leicht zu kultiviern.
+Sie werden häufig in der Forschung verwendet.
 \subsubsection*{A375}
-
+A375 
 
 \section{Durchführung}
 
