--- a/protokoll.tex
+++ b/protokoll.tex
@@ -46,28 +46,31 @@ ist, sondern dass es nicht transkribiert wird.
 \subsection*{Zellkulturen}
 Für die RNA-Isolation wurden die Zelllinien HEK293T und A375 verwendet.
 Beide Zellkulturen sind immortale humane Zelllinien.
-
-\subsubsection*{HEK293T}
-HEK293T sind Zellen, die aus der Niere eines Embryos gewonnen wurden.
-Sie sind durch die Transformation mit dem SV40-T-Antigen immortalisiert
-worden.
-
-\subsubsection*{A375}
-Da A375-Zellen aus einem Melanom stammen, sind sie von natur aus
-immortalisiert.
+\begin{itemize}
+    \item HEK293T sind Zellen, die aus der Niere eines Embryos gewonnen wurden.
+    Sie sind durch die Transformation mit dem SV40-T-Antigen immortalisiert
+    worden.
+    \item A375-Zellen stammen aus einem Melanom, sind sie von natur aus
+    immortalisiert.
+\end{itemize}
 
 \subsection*{Genes of Interest}
 Die Gene of Interest sind die Gene, die in dieser Arbeit quantifiziert
-werden sollen. In diesem Fall sind es die Gene GAPDH und beta-Actin.
-
-\subsection*{GAPDH}
-
-GAPDH (Glyceraldehyde-3-phosphate dehydrogenase) katalysiert die
-Oxidation von Glyceraldehyd-3-phosphat zu 1,3-Bisphosphoglycerat im
-Glykolyseweg.
+werden sollen. In diesem Fall sind es die Gene GAPDH und Beta-Actin.
+\begin{itemize}
+    \item GAPDH (Glyceraldehyde-3-phosphate dehydrogenase) katalysiert die 
+    Oxidation von Glyceraldehyd-3-phosphat zu
+    1,3-Bisphosphoglycerat im Glykolyseweg.
 \[
 \text{C}_3\text{H}_5\text{O}_6\text{P} + \text{NAD}^+ + \text{P}_i \xrightarrow{\text{GAPDH}} \text{C}_3\text{H}_4\text{O}_{10}\text{P}_2 + \text{NADH} + \text{H}^+
 \]
+
+    \item Beta-Actin wird in der qPCR als Referenzgen verwendet, da es in allen
+    Zellen in gleicher Menge vorhanden ist und somit als Kontrollgen dient.
+    
+\end{itemize}
+
+
 
 \section{Durchführung}
 
