--- a/protokoll.tex
+++ b/protokoll.tex
@@ -82,7 +82,7 @@ Zunächst wurden die tiefgefrorenen Zellpellets der kultivierten Zellen aufgetau
 Im nächsten Schritt wurde aus dem Lysat die genomische DNA (gDNA) durch Waschung über einer Removal Column entfernt. Hierfür wurden 800 µl Lysat in die gDNA Removal Column überführt und für 1 Minute bei 10.000 rpm und Raumtemperatur (RT) zentrifugiert.
 
 \textbf{RNA isolieren und Nebenprodukte entfernen:}
-Der flüssige Durchsatz wurde nach Entfernen und Entsorgung der gDNA Removal Column im Verhältnis 1:1 mit Ethanol (≥95\%) gemischt. Die Mischung wurde in mehreren Durchgängen in die RNA Purification Column überführt und für 1 Minute bei 10.000 rpm und RT zentrifugiert. Der Durchsatz wurde nach jedem Durchgang verworfen. Der Prozess wurde wiederholt, bis die Mischung einmal komplett durch die RNA Removal Column zentrifugiert wurde.
+Der flüssige Durchsatz wurde nach Entfernen und Entsorgung der gDNA Removal Column im Verhältnis 1:1 mit Ethanol (\(\geq\)95\%) gemischt. Die Mischung wurde in mehreren Durchgängen in die RNA Purification Column überführt und für 1 Minute bei 10.000 rpm und RT zentrifugiert. Der Durchsatz wurde nach jedem Durchgang verworfen. Der Prozess wurde wiederholt, bis die Mischung einmal komplett durch die RNA Removal Column zentrifugiert wurde.
 
 \textbf{DNase 1 Behandlung:}
 Anschließend wurde die RNA Removal Column mit 500 µl RNA Wash Buffer benetzt und nochmals für 1 Minute zentrifugiert. Der Durchsatz wurde verworfen. Im nächsten Schritt wurde die RNA Removal Column in ein Tube überführt, das 75 µl DNase I Reaction Buffer enthält und die Matrix mit DNase I benetzt. Das Tube wurde 15 Minuten bei RT inkubiert. Danach wurden 500 µl Wash Buffer auf die Säule pipettiert, 1 Minute zentrifugiert und der Überstand verworfen.
@@ -145,24 +145,6 @@ Die Proben wurden in einem Roche Light Cycler 96 mit folgendem Programm analysie
 \end{tabular}
 \caption{PCR-Zyklusprogramm}
 \end{table}
-
-% Ergebnisse
-\section{Ergebnisse}
-
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-    \hline
-    Messung & Wert1 & Wert2 \\
-    \hline
-    1 & 10 & 20 \\
-    2 & 30 & 40 \\
-    \hline
-    \end{tabular}
-    \caption{Beispieltabelle}
-    \label{tab:beispiel}
-\end{table}
-
 
 % Diskussion
 \section{Diskussion}
