--- a/protokoll.tex
+++ b/protokoll.tex
@@ -77,43 +77,90 @@ werden sollen. In diesem Fall sind es die Gene GAPDH und Beta-Actin.
 
 \subsection{RNA-Isolation mittels Monarch\textsuperscript{\textregistered} Total RNA Miniprep Kit (NEB)}
 
-\subsubsection*{Lysat erstellen}
-Zunächst wurden die tiefgefrorenen
-Zellpellets der kultivierten Zellen aufgetaut,
-bei 4 °C für 2 Minuten bei 10.000 rpm zentrifugiert
-und durch Zugabe von 800 µl des Lysepuffers in Lysat überführt.
-Durch die Lyse wurden die Zellen aufgebrochen
+\begin{enumerate}
+    \item Lysat erstellen
+    \item gDNA entfernen
+    \item RNA isolieren und Nebenprodukte entfernen, unter Nutzung von Ethanolpräzipitation, um die Haftung der RNA zu erleichtern.
+    \item DNase 1 zerstört Reste der DNA
+    \item Elution RNA in nukleasefreiem Wasser
+\end{enumerate}
+
+\subsubsection*{RNA-Isolation}
+In diesem Versuch wurde die RNA aus kultivierten
+humanen Zellen isoliert. Zu beachten sind die
+sorgfältige Reinigung von allen Oberflächen und Geräten
+mit 70\,\%{}igem Alkohol, um Verunreinigungen mit
+Nukleasen zu vermeiden. Aus gleichem Grund ist es sinnvoll,
+stets mit Handschuhen zu arbeiten.
+Dafür wurden zunächst die tiefgefrorenen Zellpellets der
+kultivierten Zellen aufgetaut, bei 4 °C für 2 Minuten bei
+10.000 rpm zentrifugiert und durch Zugabe von 800 µl des
+Lysepuffers in Lysat überführt. 
+Durch die Lyse werden die Zellen aufgebrochen
 und der Zellinhalt für die weitere Prozessierung zugänglich gemacht.
-
-\subsubsection*{gDNA entfernen}
-Im nächsten Schritt wurde aus dem Lysat die
-genomische DNA (gDNA) durch Waschung über einer Removal Column entfernt.
-Hierfür wurden 800 µl Lysat in die gDNA Removal Column überführt und für
-1 Minute bei 10.000 rpm und Raumtemperatur (RT) zentrifugiert.
-
-\subsubsection*{RNA isolieren und Nebenprodukte entfernen}
-Der flüssige Durchsatz wurde nach Entfernen und Entsorgung der
-gDNA Removal Column im Verhältnis 1:1 mit Ethanol (\(\geq\)95\%) gemischt.
-Die Mischung wurde in mehreren Durchgängen in
-die RNA Purification Column überführt und für 1 Minute bei 10.000 rpm
-und RT zentrifugiert. Der Durchsatz wurde nach jedem Durchgang verworfen.
-Der Prozess wurde wiederholt, bis die Mischung einmal
-komplett durch die RNA Removal Column zentrifugiert wurde.
-
-\subsubsection*{DNase 1 Behandlung}
-Anschließend wurde die RNA Removal Column mit 500 µl RNA Wash Buffer benetzt und nochmals für 1 Minute zentrifugiert. Der Durchsatz wurde verworfen. Im nächsten Schritt wurde die RNA Removal Column in ein Tube überführt, das 75 µl DNase I Reaction Buffer enthält und die Matrix mit DNase I benetzt. Das Tube wurde 15 Minuten bei RT inkubiert. Danach wurden 500 µl Wash Buffer auf die Säule pipettiert, 1 Minute zentrifugiert und der Überstand verworfen.
-
-\subsubsection*{Elution der RNA}
-Es folgte eine Waschung mit 500 µl Priming Buffer und 1 Minute Zentrifugation. Nach Verwerfen des Überstands wurde nochmals mit 500 µl Wash Buffer auf die Säule pipettiert, 2 Minuten zentrifugiert und der Überstand entfernt. Die Säule wurde in ein nukleasefreies Tube überführt. Die Elution der RNA erfolgte, indem 50 µl nukleasefreies H\textsubscript{2}O auf die Matrix der Säule pipettiert und 1 Minute zentrifugiert wurde. Die genaue Vorgehensweise ist der Anleitung des Monarch\textsuperscript{\textregistered} Total RNA Miniprep Kit (NEB) zu entnehmen.
+Im nächsten Schritt wurde aus dem Lysat die gDNA, die genomic DNA,
+durch Waschung über einer Removal Column entfernt.
+Hierfür wurden 800 µl Lysat in das gDNA Removal Column
+überführt und für 1 Minute bei 10.000 rpm und
+Raumtemperatur (RT) zentrifugiert.
+Die Column macht sich die strukturellen Unterschiede der
+DNA und RNA zunutze, um die DNA zu fixieren. Der flüssige
+Durchsatz wurde nach Entfernen und Entsorgung der gDNA Removal
+Column im Verhältnis 1:1 mit Ethanol (\(\geq\) 95\%) gemischt.
+Die Mischung wurde in mehreren Durchgängen in die RNA Purification
+Column überführt und für 1 Minute, 10.000 rpm und RT zentrifugiert.
+Der Durchsatz wurde nach jedem Durchgang verworfen. Der Prozess
+wurde wiederholt, bis die Mischung einmal komplett durch die RNA Removal
+Column zentrifugiert wurde. 
+Anschließend wurde die RNA Removal Column mit 500 µl RNA Wash Buffer
+benetzt und nochmals für 1 Minute zentrifugiert. Der Durchsatz wurde verworfen.
+Im nächsten Schritt wurde die RNA Removal Column in ein Tube
+überführt, das 75 µl DNAse I Reaction Buffer enthält und die Matrix
+mit DNAse I benetzt. 
+Das Tube wurde 15 Minuten bei RT inkubiert. Danach wurden 500 µl Wash
+Buffer auf die Säule pipettiert, 1 Minute zentrifugiert und der
+Überstand verworfen. Anschließend wurden 500 µl Priming Buffer auf die
+Säule pipettiert, 1 Minute zentrifugiert und der Überstand verworfen.
+Es folgte eine Waschung mit 500 µl Wash Buffer und 1 Minute Zentrifugation.
+Nach Verwerfen des Überstands wurde nochmals mit 500 µl Wash Buffer auf die
+Säule pipettiert, 2 Minuten zentrifugiert und der Überstand entfernt.
+Die Säule wurde in ein nukleasefreies Tube überführt.
+Es folgte die Elution der RNA, indem 50 µl nukleasefreies
+H$_2$O auf die Matrix der Säule pipettiert und 1 Minute zentrifugiert wurde.
+Die genaue Vorgehensweise ist der Anleitung des Monarch
+Total RNA Miniprep Kit (NEB) zu entnehmen.
 
 \subsubsection*{Spektroskopie zur Bestimmung der Nukleinsäurenkonzentration}
 
-Dieser Abschnitt dient der Bewertung der Qualität der aufgereinigten RNA aus den Zellpellets. Hierfür wurde 1 µl der Probe vermessen. Ziel war es, das Verhältnis der Absorption bei den Wellenlängen 260/280 [nm] zu überprüfen. Der experimentelle Schwellwert für eine weiterverwendbare RNA-Konzentration in der Probe liegt bei ca. 20. Die Messung fand in einem Spektrophotometer DS-11+ von DeNovix statt. Benutzt wurde das RNA-Programm. Zunächst musste eine Blank-Messung durchgeführt werden, um dem Spektrophotometer einen Bezugsrahmen für folgende Messungen zu geben. Dies erfolgte durch die Messung von 1 µl nukleasefreiem H\textsubscript{2}O. Nach der Eichung des Referenzrahmens folgte die Messung der einzelnen Proben, stets mit 1 µl Probe auf der Mikrovolumenabsorptionseinheit, die nach jeder Messung mit der gleichen Menge nukleasefreiem H\textsubscript{2}O gereinigt wurde.
+Dieser Abschnitt findet statt, um die Qualität der
+Aufbereitung der RNA aus den Zellpellets zu bewerten.
+Hierfür wurde 1µl der Probe vermessen. Ziel war es,
+das Verhältnis der Absorption der Wellenlänge 260/280 [nm] zu überprüfen.
+Der experimentelle Schwellwert für eine weiterverwendbare RNA-Konzentration
+in der Probe ist ca. 2,0. Die Messung fand in einem Spektrophotometer
+\mbox{DS-11+ -DeNovix} statt. Benutzt wurde das RNA-Programm.
+Zunächst musste eine blank-messung durchgeführt werden,
+um dem Spektrophotometer einen Bezugsrahmen für folgende Messungen zu geben.
+Dies erfolgt durch die Messung 1 µl nukleasefreies H$_2$O. Die Messung
+erfolgte über die Mikrovolumenabsorptionseinheit. Nach der Eichung des
+Referenzrahmens folgte die Messung der einzelnen Proben. Stets mit 1 µl
+Probe auf der Mikrovolumenabsorptionseinheit, die nach jeder Messung mit
+der gleichen Menge nukleasefreiem H$_2$O gereinigt wurde. 
 
 \subsection{cDNA-Synthese aus isolierter RNA}
 
-\subsubsection*{Mischen der Komponenten}
-Für die RT-PCR wurde ein Reaktionsvolumen von 20 µl festgelegt. Die Komponenten wurden in ein 15 ml Eppendorf-Gefäß gefüllt und abzentrifugiert.
+\begin{itemize}
+    \item Mischen der Komponenten in spezifischer Reihenfolge
+    \item Inkubation
+\end{itemize}
+
+\subsubsection*{Reverse Transkription - cDNA-Synthese aus isolierter RNA}
+
+Zunächst wurde ein Heizblock TS pro - CellMedia auf 25 °C,
+5 Minuten und nicht schüttelnd voreingestellt. Der Puffer,
+dNTPs, Random Primer Mix und RNA wurden auf Eis aufgetaut.
+RNAse Inhibitor und M-MuLV Reverse Transkriptase wurden bei -20 °C gelagert.
+Für die RT-PCR wurde ein Reaktionsvolumen von 20 µl festgelegt.
 
 \begin{table}[H]
 \centering
@@ -131,8 +178,11 @@ Nukleasefreies H\textsubscript{2}O & Bis 20 µl auffüllen \\ \hline
 \caption{Komponenten für die cDNA-Synthese}
 \end{table}
 
-\subsubsection*{Inkubation}
-Die Inkubation erfolgte im Heizblock TS pro – CellMedia in drei Schritten:
+Die angegebenen Komponenten wurden in ein 1,5 ml
+Eppendorf-Gefäß gefüllt und abzentrifugiert.
+Abschließend wurde die Inkubation im Heizblock vorgenommen.
+Diese erfolgte in drei Schritten:
+
 \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|}
@@ -161,54 +211,23 @@ Die Proben wurden in einem Roche Light Cycler 96 mit folgendem
 Programm analysiert:
 
 \begin{table}[H]
-\centering
-\begin{tabular}{|l|l|l|l|}
-\hline
-\textbf{Cycles} & \textbf{Step} & \textbf{Temp [°C]} & \textbf{Time [sec]} \\ \hline
-1 & Preincubation & 95 & 120 \\ \hline
-40 & 2 Step Amplification & 95 & 5 \\ \hline
- &  & 65 & 30 \\ \hline
-1 & High Resolution Melting & 95 & 60 \\ \hline
- &  & 40 & 60 \\ \hline
- &  & 65 & 1 \\ \hline
- &  & 97 & 1 \\ \hline
-1 & Cooling & 37 & 30 \\ \hline
-\end{tabular}
-\caption{PCR-Zyklusprogramm}
-\end{table}
-
-
-\begin{table}[H]
     \centering
     \begin{tabular}{|l|l|l|l|}
     \hline
     \textbf{Cycles} & \textbf{Step} & \textbf{Temp [°C]} & \textbf{Time [sec]} \\ \hline
     1 & Preincubation & 95 & 120 \\ \hline
-    40 & 2 Step Amplification & 95 & 5 \\ \hline
+    \multirow{2}{*}{40} & \multirow{2}{*}{2 Step Amplification} & 95 & 5 \\ \cline{3-4}
      &  & 65 & 30 \\ \hline
-    1 & High Resolution Melting & 95 & 60 \\ \hline
-     &  & 40 & 60 \\ \hline
-     &  & 65 & 1 \\ \hline
+    \multirow{4}{*}{1} & \multirow{4}{*}{High Resolution Melting} & 95 & 60 \\ \cline{3-4}
+     &  & 40 & 60 \\ \cline{3-4}
+     &  & 65 & 1 \\ \cline{3-4}
      &  & 97 & 1 \\ \hline
     1 & Cooling & 37 & 30 \\ \hline
     \end{tabular}
     \caption{PCR-Zyklusprogramm}
     \end{table}
-    
-    \begin{table}[H]
-        \centering
-        \begin{tabular}{|c|c|c|}
-        \hline
-        \textbf{Header 1} & \multicolumn{2}{|c|}{\textbf{Header 2 and 3 Merged}} \\ \hline
-        Row 1, Col 1 & Row 1, Col 2 & Row 1, Col 3 \\ \hline
-        Row 2, Col 1 & Row 2, Col 2 & Row 2, Col 3 \\ \hline
-        \multirow{2}{*}{Merged Row} & Row 3, Col 2 & Row 3, Col 3 \\ \cline{2-3}
-         & Row 4, Col 2 & Row 4, Col 3 \\ \hline
-        Row 5, Col 1 & Row 5, Col 2 & Row 5, Col 3 \\ \hline
-        Row 6, Col 1 & Row 6, Col 2 & Row 6, Col 3 \\ \hline
-        \end{tabular}
-        \caption{Table with merged columns and rows}
-        \end{table}
+  
+
 
 % Diskussion
 \section{Diskussion}
