--- a/protokoll.tex
+++ b/protokoll.tex
@@ -197,6 +197,12 @@ Diese erfolgte in drei Schritten:
 
 \subsection{Quantifizierung durch qPCR (Real-Time PCR)}
 
+\begin{itemize}
+    \item 3 Mastermixe erstellen (je Primer-Paar)
+    \item PCR im Cycler
+\end{itemize}
+
+\subsubsection*{Quantifizierung durch qPCR}
 Zur Untersuchung von drei Primern wurde jeweils ein
 Master Mix mit 80 µl Reaktionsvolumen für eine Messung,
 eine Zweitmessung und eine NTC in 20 µl vorbereitet.
