--- a/protokoll.tex
+++ b/protokoll.tex
@@ -8,10 +8,23 @@
 \usepackage{float}
 \usepackage{cite}
 \usepackage{multirow}
+\usepackage{booktabs}
+\usepackage{url}
+\usepackage{geometry}
+\usepackage{hyperref}
+\usepackage{fancyhdr}
+\usepackage{setspace}
+\usepackage{caption}
+\geometry{
+    left=1in,
+    right=1in,
+    top=1in,
+    bottom=1in
+}
 
 
 % Titel und Autor
-\title{RNA-Quantifizierung mittels qPCR}
+\title{RNA Analytik}
 \author{Thorsten Enge \and David Maruhn}
 \date{\today}
 
@@ -27,20 +40,7 @@
 % Einleitung
 \section{Einleitung}
 
-Während bei der DNA-Analytik untersucht wird, ob eine bestimmte
-DNA-Sequenz auf dem Genom vorhanden ist, wird bei der RNA-Analytik
-untersucht, ob und wie stark ein bestimmtes Gen transkribiert wird.
-Das Vorhandensein eines Gens auf dem Genom bedeutet nicht zwangsläufig,
-dass dieses Gen auch transkribiert wird. Mechanismen wie die
-DNA-Methylierung, die Histonmodifikation, Transkriptionsfaktoren und
-Enhancer bzw. Silencer beeinflussen die Transkription eines Gens.
-Die durch die Analyse der RNA kann einerseits das Vorhandensein eines
-Gens auf dem Genom bestätigt werden, andererseits kann durch die
-quantifizierung Rückschlüsse auf die Transkriptionsrate gezogen werden
-und somit auf die Aktivität des Gens. Das nichtvorhandensein einer RNA
-bedeutet nicht zwangsläufig, dass das Gen nicht auf dem Genom vorhanden
-ist, sondern dass es nicht transkribiert wird.
-
+Während bei der DNA-Analytik untersucht wird, ob eine bestimmte DNA-Sequenz auf dem Genom vorhanden ist, wird bei der RNA-Analytik untersucht, ob und wie stark ein bestimmtes Gen transkribiert wird. Das Vorhandensein eines Gens auf dem Genom bedeutet nicht zwangsläufig, dass dieses Gen auch transkribiert wird. Mechanismen wie die DNA-Methylierung, die Histonmodifikation, Transkriptionsfaktoren und Enhancer bzw. Silencer beeinflussen die Transkription eines Gens. Die durch die Analyse der RNA kann einerseits das Vorhandensein eines Gens auf dem Genom bestätigt werden, andererseits kann durch die quantifizierung Rückschlüsse auf die Transkriptionsrate gezogen werden und somit auf die Aktivität des Gens. Das nichtvorhandensein eines Transkripts bedeutet entweder das Fehlen des Gens auf dem Genom oder eine sehr geringe Transkriptionsrate. 
 
 % Materialien und Methoden
 \section{Materialien und Methoden}
@@ -75,12 +75,15 @@ werden sollen. In diesem Fall sind es die Gene GAPDH und Beta-Actin.
 
 \section{Durchführung}
 
+Die RNA wird aus zwei unterschidllichen Zelllinien isoliert und anschließend mittels einer reverse Transkription in cDNA transkribiert. Die cDNA wird dann mittels qPCR quantifiziert.
+
 \subsection{RNA-Isolation mittels Monarch\textsuperscript{\textregistered} Total RNA Miniprep Kit (NEB)}
 
 \begin{enumerate}
     \item Lysat erstellen
     \item gDNA entfernen
-    \item RNA isolieren und Nebenprodukte entfernen, unter Nutzung von Ethanolpräzipitation, um die Haftung der RNA zu erleichtern.
+    \item RNA isolieren und Nebenprodukte entfernen, unter Nutzung
+    von Ethanolpräzipitation, um die Haftung der RNA zu erleichtern.
     \item DNase 1 zerstört Reste der DNA
     \item Elution RNA in nukleasefreiem Wasser
 \end{enumerate}
@@ -139,13 +142,14 @@ das Verhältnis der Absorption der Wellenlänge 260/280 [nm] zu überprüfen.
 Der experimentelle Schwellwert für eine weiterverwendbare RNA-Konzentration
 in der Probe ist ca. 2,0. Die Messung fand in einem Spektrophotometer
 \mbox{DS-11+ -DeNovix} statt. Benutzt wurde das RNA-Programm.
-Zunächst musste eine blank-messung durchgeführt werden,
+Zunächst wird eine blank-messung durchgeführt,
 um dem Spektrophotometer einen Bezugsrahmen für folgende Messungen zu geben.
 Dies erfolgt durch die Messung 1 µl nukleasefreies H$_2$O. Die Messung
 erfolgte über die Mikrovolumenabsorptionseinheit. Nach der Eichung des
 Referenzrahmens folgte die Messung der einzelnen Proben. Stets mit 1 µl
 Probe auf der Mikrovolumenabsorptionseinheit, die nach jeder Messung mit
-der gleichen Menge nukleasefreiem H$_2$O gereinigt wurde. 
+nukleasefreiem H$_2$O gereinigt wurde.
+    
 
 \subsection{cDNA-Synthese aus isolierter RNA}
 
@@ -234,17 +238,135 @@ Programm analysiert:
     \end{table}
   
 
+    Natürlich, hier ist der überarbeitete Abschnitt:
+
+\subsection{Analyse der Zielgene}
+Um die qPCR-Ergebnisse korrekt interpretieren zu können, wurden zunächst die Transkriptvarianten für GAPDH und Beta-Actin im RefSeq der NCBI-Datenbank identifiziert. Anschließend wurden die Primersequenzen mit den Sequenzen der verschiedenen Transkriptvarianten verglichen, um potenzielle Unterschiede in der Affinität der Primer zu den verschiedenen Transkripten zu ermitteln. Diese Analyse wurde mithilfe eines Python-Skripts durchgeführt.
+    
 \section{Ergebnisse}
 
+\subsection*{Analyse der Zielgene}
+
+
+\begin{table}[ht]
+    \centering
+    \begin{tabular}{|l|l|c|c|c|}
+    \hline
+    \textbf{Gen} & \textbf{Transkriptvariante} & \textbf{mRNA} & \textbf{Amplifikat ohne Primer} & \textbf{Amplifikat} \\ \hline
+    \multirow{6}{*}{GAPDH\_1} & Variant 7 & 1231 & 113 & 154 \\ \cline{2-5} 
+                              & Variant 2 & 1386 & \multicolumn{2}{c|}{Forward Primer nicht in Sequenz} \\ \cline{2-5} 
+                              & Variant 3 & 1377 & 167 & 208 \\ \cline{2-5} 
+                              & Variant 4 & 1525 & 167 & 208 \\ \cline{2-5} 
+                              & Variant 1 & 1285 & 167 & 208 \\ \cline{2-5} 
+                              & Variant 6 (non-coding) & 763 & 167 & 208 \\ \hline
+    \multirow{6}{*}{GAPDH\_2} & Variant 7 & 1231 & 221 & 269 \\ \cline{2-5} 
+                              & Variant 2 & 1386 & 221 & 269 \\ \cline{2-5} 
+                              & Variant 3 & 1377 & 221 & 269 \\ \cline{2-5} 
+                              & Variant 4 & 1525 & 221 & 269 \\ \cline{2-5} 
+                              & Variant 1 & 1285 & 221 & 269 \\ \cline{2-5} 
+                              & Variant 6 (non-coding) & 763 & \multicolumn{2}{c|}{Forward und Reverse Primer nicht in Sequenz} \\ \hline
+    Beta-Actin               &  & 1812 & 339 & 385 \\ \hline
+    \end{tabular}
+    \caption{Länge der Amplifikate in Basenpaaren (bp): 3. Spalte länge der mRNA, 4. Spalte länge des Amplifikats ohne Primer, 5. Spalte länge des Amplifikats mit Primer (Ergebnisse der Analyse der Zielgene mit Python-Skript)}
+    \label{table:mRNA_lengths}
+    \end{table}
+Das GAPDH Gen besitzt zehn Exons \cite{NCBIGene2597}, durch alternative Splicing entstehen sechs verschiedene Transkriptvarianten. Die Transkriptvarianten 1, 2, 3, 4 und 7 kodieren für das Protein, wohingegen die Transkriptvariante 6 nicht kodiert. Der GAPDH\_1 Primer bindet an die Transkriptvarianten 1, 3, 4, 6 und 7, wohingegen der GAPDH\_2 Primer an die Transkriptvarianten 1, 2, 3, 4 und 7 bindet.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{images/gapdh.png}
+    \caption{Transkriptvarianten und Exons des GAPDH Gens \cite{NCBIGene2597_products}}
+    \label{fig:exons}
+\end{figure}
+
+\subsection*{Spektroskopie zur Bestimmung der Nukleinsäurenkonzentration}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{lrrr}
+    \toprule
+    Sample name & Conc. (ng/uL) & 260/280[nm] & 260/230[nm] \\
+    \midrule
+    HEK293T & 115.449 & 2.098 & 2.069 \\
+    HEK293T & 123.755 & 2.092 & 1.889 \\
+    A375 & 442.625 & 2.119 & 2.164 \\
+    A375 & 444.200 & 2.116 & 2.189 \\
+    SAAA & 174.067 & 2.128 & 1.982 \\
+    SAAA & 162.606 & 2.125 & 1.987 \\
+    JEEE & 257.267 & 2.112 & 2.084 \\
+    JEEE & 253.345 & 2.133 & 2.078 \\
+    \bottomrule
+    \end{tabular}
+    \caption{Verhältnis der Absorption der Wellenlänge 260/280 [nm] und 260/230 [nm] der Proben}
+\end{table}
+
+Die Reinheit der RNA wird durch die 260/280- und 260/230-Verhältnisse bestimmt. Ein ideales 260/280-Verhältnis für RNA liegt bei etwa 2.0, was auf eine hohe Reinheit hinweist. Ein 260/230-Verhältnis sollte typischerweise zwischen 2.0 und 2.2 liegen, was auf das Fehlen von Verunreinigungen wie EDTA, Kohlenhydraten oder Phenolen hinweist \cite{ThermoFisher260280, ThermoFisherQuantitatingRNA}.
+
+\textbf{Interpretation der Ergebnisse:}
+\begin{figure}[H]
+    \centering
+    \begin{minipage}[H]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{images/a3751.png}
+      \caption{Absorptionsspektrum der A375-Proben}
+      \label{fig:a3751}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[H]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{images/hek1.png}
+      \caption{Absorptionsspektrum der HEK293T-Proben}
+      \label{fig:hek1}
+    \end{minipage}
+  \end{figure}
+\begin{itemize}
+    \item \textbf{HEK293T}:
+        \begin{itemize}
+            \item Beide Proben zeigen ein 260/280-Verhältnis von etwa 2.09, was auf eine hohe Reinheit der RNA hinweist.
+            \item Das 260/230-Verhältnis der ersten Probe (2.069) liegt im idealen Bereich, während das Verhältnis der zweiten Probe (1.889) leicht unter dem idealen Bereich liegt, was auf mögliche Kontaminationen hinweisen könnte.
+        \end{itemize}
+
+    \item \textbf{A375}:
+        \begin{itemize}
+            \item Beide Proben haben ein 260/280-Verhältnis von etwa 2.12, was eine gute RNA-Reinheit anzeigt.
+            \item Das 260/230-Verhältnis liegt für beide Proben (2.164 und 2.189) im idealen Bereich, was auf eine sehr hohe Reinheit der RNA ohne signifikante Verunreinigungen hinweist.
+        \end{itemize}
+    
+    \item \textbf{SAAA}:
+        \begin{itemize}
+            \item Beide Proben zeigen ein 260/280-Verhältnis von etwa 2.12, was auf eine hohe Reinheit hinweist.
+            \item Die 260/230-Verhältnisse (1.982 und 1.987) sind leicht unter dem idealen Bereich, was auf geringe Verunreinigungen hindeuten könnte, jedoch immer noch akzeptabel ist.
+        \end{itemize}
+    \item \textbf{JEEE}:
+        \begin{itemize}
+            \item Beide Proben zeigen ein 260/280-Verhältnis von etwa 2.12 bis 2.13, was auf eine hohe Reinheit hinweist.
+            \item Das 260/230-Verhältnis (2.084 und 2.078) liegt im idealen Bereich, was auf eine hohe Reinheit der RNA hinweist.
+        \end{itemize}
+\end{itemize}
+
+Die meisten Proben zeigen 260/280- und 260/230-Verhältnisse, die nahe oder im idealen Bereich liegen, was auf eine hohe Reinheit der isolierten RNA hinweist. Einige leichte Abweichungen beim 260/230-Verhältnis könnten auf minimale Verunreinigungen hinweisen, die jedoch die Gesamtqualität der RNA nicht signifikant beeinträchtigen sollten.
+
+\subsection*{PCR-Ergebnisse}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{images/gel/a375bp.png}
+    \caption{Agarose-Gel-Elektrophorese der PCR-Produkte der A375-Proben}
+    \label{fig:gela375}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{images/gel/hek293T.png}
+    \caption{Agarose-Gel-Elektrophorese der PCR-Produkte der HEK293T-Proben}
+    \label{fig:gela375}
+\end{figure}
 
 % Diskussion
 \section{Diskussion}
 
-% Schlussfolgerung
-\section{Schlussfolgerung}
+
 
 % Literaturverzeichnis
 \bibliographystyle{plain}
-\bibliography{literatur}
+\bibliography{references}
 
 \end{document}
