Update page margins and section headings in protokoll.tex and protokoll.pdf

--- a/protokoll.tex
+++ b/protokoll.tex
@@ -360,6 +360,26 @@ Die meisten Proben zeigen 260/280- und 260/230-Verhältnisse, die nahe oder im i
     \label{fig:gela375}
 \end{figure}
 
+\subsection*{High Resolution Melting (HRM) Analyse}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{images/cycler/mc2.png}
+    \caption{Schmelzkurven der GAPDH-Proben}
+    \label{fig:gapdh}
+\end{figure}
+\subsection*{qPCR-Ergebnisse}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{images/cycler/G1_2_G2.png}
+    \caption{Verhältnisse der Amplifikationen der GAPDH-Proben}
+    \label{fig:gapdh}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{images/cycler/G1_2_G2.png}
+    \caption{Verhältnisse der Amplifikationen der GAPDH-Proben zu Beta-Actin}
+    \label{fig:gapdh2beta}
+\end{figure}
 % Diskussion
 \section{Diskussion}
 
